Parcial 3: Implementando graficos en tiempo real